# Aiogram-Bot-Template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
bot/: main.py
bot/filters/: admin.py
bot/handlers/: admin.py
bot/keyboards/: inline.py
bot/services/: broadcast.py
core/: config.py
core/configs/: bot.py  database.py
infrastructure/database/: setup.py
infrastructure/database/models/: users.py
infrastructure/database/repository/: repository.py
infrastructure/database/services/: users.py
